--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -32,9 +32,9 @@ jobs:
       run: terraform init
 
     # Run a terraform fmt for push
-    - name: Terraform Format
-      id: fmt
-      run: terraform fmt -check
+    # - name: Terraform Format
+    #  id: fmt
+    #  run: terraform fmt -check
 
     # Run a terraform validate
     # Run even if formatting fails
